--- a/Web_Sever/Web_Server/appsettings.json
+++ b/Web_Sever/Web_Server/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(local); Database=TopCVWeb; Uid=sa; Pwd=123;TrustServerCertificate=True;"
+  },
+  "JWT": {
+    "Audience": "Candidate",
+    "Issuer": "https://localhost:7214",
+    "Secret": "123456789 123456789 123456789 123456789"
   }
 }
