--- a/Web_Sever/Web_Server/appsettings.json
+++ b/Web_Sever/Web_Server/appsettings.json
@@ -13,5 +13,11 @@
     "Audience": "Candidate",
     "Issuer": "https://localhost:7214",
     "Secret": "123456789 123456789 123456789 123456789"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderEmail": "keeplearnedunow@gmail.com",
+    "SenderPassword": "tdgi bjdx glap epvs"
   }
 }
