--- a/Web_Client/package.json
+++ b/Web_Client/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@tinymce/tinymce-angular": "^8.0.1",
+    "chart.js": "^4.4.8",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^19.1.2",
     "rxjs": "~7.8.0",
